Made PR changes

--- a/src/app/malaria-101/activity-1/activity-1-1.component.html
+++ b/src/app/malaria-101/activity-1/activity-1-1.component.html
@@ -4,10 +4,10 @@
 	</div>
 </div>
 <div class="row">
-    <button class="arrow-red col-lg-5 col-md-offset-2">
+    <button prev class="col-lg-5 col-md-offset-2">
         Prev
     </button>
-    <button class="arrow-green col-lg-5 col-md-offset-7" (click)="nextActivity()">
+    <button next class="col-lg-5 col-md-offset-7" (click)="nextActivity()">
         Next
     </button>    
 </div>
