--- a/src/app/malaria-101/activity-1/activity-1-2.component.html
+++ b/src/app/malaria-101/activity-1/activity-1-2.component.html
@@ -10,12 +10,6 @@
         <img class="lifecycle-imgs pieces" src="../../../../assets/img/{{card}}" draggable="true" (dragstart)="drag($event)" id="drag{{idx+1}}">
     </div>
 </div>
-<div class="prog-btns">
-    <button prev [className]="position + ' dnd-red'">
-        Prev
-    </button>
-    <button next [hidden]="!activityComplete" class="dnd-green bounce">
-        Next
-    </button>    
-</div>
+<button-nav nexturl="/malaria/activity-2" prevurl="/malaria/activity-1-1" [complete]="activityComplete"></button-nav>
+
 
