--- a/src/app/malaria-101/malaria-101.component.html
+++ b/src/app/malaria-101/malaria-101.component.html
@@ -1,8 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-5 col-lg-offset-4">
-            <h3 class="header-1">Malaria 101</h3>
-        </div>
+        <div class="col-md-12 text-center"><h2 class="stage-header">Introduction</h2></div>
     </div>
     <router-outlet></router-outlet>
 </div>
