Made PR changes

--- a/src/app/malaria-101/activity-3/activity-3.component.html
+++ b/src/app/malaria-101/activity-3/activity-3.component.html
@@ -2,34 +2,24 @@
     <div class="row" [hidden]="activityComplete">
         <h2 class = "col-lg-5 col-lg-offset-4 text-center" >{{questionText}}</h2>
     </div>
-    <div class="row col-md-offset-4" [hidden]="activityComplete">
-        <br><br>
-        <div class="col-lg-4">  
-            <div id= "1" class="option" (click)="optionSelected($event)">{{this.opt[0]}}</div>
-            <div id= "2" class="option" (click)="optionSelected($event)">{{this.opt[1]}}</div>
+    <div class="row col-md-offset-3" [hidden]="activityComplete">
+        <div class="col-lg-5">
+            <div id= "1" class="option" (click)="optionSelected($event)"><span>{{this.opt[0]}}</span></div>
+            <div id= "2" class="option" (click)="optionSelected($event)"><span>{{this.opt[1]}}</span></div>
         </div>
-        <div class="col-lg-4">
-            <div id= "3" class="option" (click)="optionSelected($event)">{{this.opt[2]}}</div> 
-            <div id= "4" class="option" (click)="optionSelected($event)">{{this.opt[3]}}</div>  
+        <div class="col-lg-5">
+            <div id= "3" class="option" (click)="optionSelected($event)"><span>{{this.opt[2]}}</span></div>
+            <div id= "4" class="option" (click)="optionSelected($event)"><span>{{this.opt[3]}}</span></div>
         </div>
     </div>
     <div class="row pad" [hidden]="!activityComplete">
-        <div class="swal2-icon swal2-info" style="display: block;">i</div>
+        <div class="swal2-icon swal2-info">i</div>
         <div>
             <h2 class="swal2-title text-center" id="swal2-title">Score!<br>You got {{this.score}} out of 5 questions right.</h2>
         </div>
-        <br>
         <div class="swal2-title txt-center">
             <button class="btn btn-primary btn-lg" (click)="reload()">Reset</button>
         </div>
     </div>
-    <br><br>
-    <div class="row">
-        <button prev class="col-lg-5 col-md-offset-3">
-            Prev
-        </button>
-        <button next class="col-lg-5 col-md-offset-6" [hidden]="!showNext">
-            Next
-        </button>
-    </div>
 </div>
+
