--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -12,3 +12,4 @@ $transparent: transparent;
 $dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
 $orange: #FAE3BB;
+$dark-orange: #EBBB67;
