--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,9 +1,8 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-5 col-lg-offset-4">
-            <h3>Introduction</h3>
-        </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="text-center">
+      <h1 class="stage-header">{{language?.heading}}</h1>
     </div>
-    <router-outlet></router-outlet>
+  </div>
+  <router-outlet></router-outlet>
 </div>
-
