--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -1,3 +1,4 @@
+@import "../styles/main";
 
 ::selection {
     background: $yellow; /* WebKit/Blink Browsers */
@@ -7,13 +8,8 @@
     background: $yellow; /* Gecko Browsers */
 }
 
-h3 {
-    text-align: center;
-    font-weight: $font-bold;
-    color: $blue;
-}
 h2 {
-    font-weight: $font-bold;
+    font-weight: $bold;
 }
 
 .mosquito {
@@ -22,14 +18,14 @@ h2 {
 }
 
 .lead-title {
-    font-weight: $font-bold;
+    font-weight: $bold;
     font-size: 2.5em;
     color: $black;
 }
 
 .lead-sub-heading {
     color: grey;
-    font-weight: $font-bold;
+    font-weight: $bold;
     font-size: 1.5em;
 }
 
@@ -41,8 +37,8 @@ h2 {
 
 @mixin border-radius($radius) {
     -webkit-border-radius: $radius;
-    -moz-border-radius: $radius; 
-    border-radius: $radius; 
+    -moz-border-radius: $radius;
+    border-radius: $radius;
 }
 
 .rectangle-speech-border {
@@ -105,7 +101,7 @@ h2 {
 
 .arrow-green {
     @extend .arrow;
-    background: green;    
+    background: green;
 }
 
 @mixin animation($animate) {
