--- a/src/app/meds-n-labels/meds-n-labels.component.scss
+++ b/src/app/meds-n-labels/meds-n-labels.component.scss
@@ -1,10 +1,4 @@
-@import "../styles/components/_variables";
-
-.stage-header {
-    margin-left: 25%; 
-    font-weight: 900;
-    color: #04529D;
-}
+@import "../styles/main";
 
 img {
     height: 120px;
@@ -43,6 +37,5 @@ img {
 
 .arrow-green {
     @extend .arrow;
-    background: green;    
+    background: green;
 }
-
