--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div *ngIf='loggedIn'>
+  <div *ngIf="loggedIn">
     <div class="header">
       <app-header (toggleNavbar)="nav.toggle()"> </app-header>
       <app-infokit #info > </app-infokit>
