--- a/src/app/malaria-101/malaria-101.component.html
+++ b/src/app/malaria-101/malaria-101.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-12 text-center"><h2 class="stage-header">Introduction</h2></div>
+        <div class="text-center">
+            <h1 class="stage-header">{{language?.heading}}</h1>
+        </div>
     </div>
     <router-outlet></router-outlet>
 </div>
-
