--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -4,6 +4,8 @@ $blue: #466BC1;
 $hover-blue: #3859A5;
 $red: #ED4337;
 $grey: #4A4A49;
+$yellow: #fff000;
+$green: #037d0d;
 $dull-grey: #9C9999;
 $light-red: #D9534F;
 $transparent: transparent;
