--- a/src/app/malaria-101/activity-3/activity-3.component.html
+++ b/src/app/malaria-101/activity-3/activity-3.component.html
@@ -22,4 +22,4 @@
         </div>
     </div>
 </div>
-<button-nav [complete]="activityComplete" prevurl="/malaria-101/activity-2" nexturl="/meds-n-labels/activity-1"></button-nav>
+<button-nav [complete]="showNext" prevurl="/malaria-101/activity-2" nexturl="/meds-n-labels/activity-1"></button-nav>
