--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -11,3 +11,5 @@ $light-red: #D9534F;
 $transparent: transparent;
 $dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
+$orange: #FAE3BB;
+$dark-orange: #EBBB67;
