--- a/src/app/authentication/reset-password.component.html
+++ b/src/app/authentication/reset-password.component.html
@@ -1,6 +1,7 @@
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-xs-8 col-xs-offset-2 text-center">
 
-    <h1>Reset Password</h1>
+    <h2><span class="header-1">{{header?.headings.titleLeft}} </span><span class="header-2">{{header?.headings.titleRight}}</span> </h2>
+    <h3 class="form-signin-heading">{{language?.messages.heading}}</h3>
 
     <div class="alert alert-danger" *ngIf="errorMessage">{{errorMessage}}</div>
     <div class="alert alert-success" *ngIf="successMessage">{{successMessage}}</div>  
@@ -8,19 +9,19 @@
     <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit(resetPasswordForm.value)">
         <div class="form-group input-group" [ngClass]="{'has-error':!resetPasswordForm.controls['password'].valid && resetPasswordForm.controls['password'].dirty}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>       
-            <input type="password" class="form-control" name="password" placeholder="New password" [formControl]="resetPasswordForm.controls['password']">
+            <input type="password" class="form-control" name="password" placeholder={{language?.placeHolders.password}} [formControl]="resetPasswordForm.controls['password']">
         </div>
         <div class="form-control-feedback">
-            <p *ngIf="resetPasswordForm.controls['password'].hasError('required') && (resetPasswordForm.controls['password'].dirty)">Password is required</p>
-            <p *ngIf="resetPasswordForm.controls['password'].hasError('pattern') && (resetPasswordForm.controls['password'].dirty)">Password is invalid</p>        
+            <p *ngIf="resetPasswordForm.controls['password'].hasError('required') && (resetPasswordForm.controls['password'].dirty)">{{authMessages?.errors.passwordReq}}</p>
+            <p *ngIf="resetPasswordForm.controls['password'].hasError('pattern') && (resetPasswordForm.controls['password'].dirty)">{{authMessages?.errors.passwordInvalid}}</p>        
         </div>
         <div class="form-group input-group" [ngClass]="{'has-error':!resetPasswordForm.controls['confirmPassword'].valid && resetPasswordForm.controls['confirmPassword'].dirty}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>       
-            <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm password" [formControl]="resetPasswordForm.controls['confirmPassword']">
+            <input type="password" class="form-control" name={{language?.placeHolders.confirmPassword}} placeholder="Confirm password" [formControl]="resetPasswordForm.controls['confirmPassword']">
         </div>    
-        <div class="alert alert-danger" *ngIf="resetPasswordForm.controls['confirmPassword'].hasError('MatchPassword') && resetPasswordForm.controls['confirmPassword'].dirty">The passwords don't match</div>
+        <div class="alert alert-danger" *ngIf="resetPasswordForm.controls['confirmPassword'].hasError('MatchPassword') && resetPasswordForm.controls['confirmPassword'].dirty">{{authMessages?.errors.passwordMatch}}</div>
         <div class="form-group">
-            <button type="submit" [disabled]="!resetPasswordForm.valid" class="form-control btn btn-primary btn-lg">Reset Password</button>
+            <button type="submit" [disabled]="!resetPasswordForm.valid" class="btn btn-primary btn-lg">{{language?.messages.buttonMessage}}</button>
         </div>    
     </form>
 </div>
