--- a/src/app/introduction/activityintro/activityintro.component.html
+++ b/src/app/introduction/activityintro/activityintro.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="introbody text-center">
+    <div [className]="position + ' introbody text-center'">
       <H1> {{language?.headings.introduction}} </H1>
       <H2> {{language?.headings.welcome}} </H2>
       <p class="lead"> {{language?.descriptions.bodyContent}} </p>
