--- a/src/app/meds-n-labels/meds-n-labels.component.scss
+++ b/src/app/meds-n-labels/meds-n-labels.component.scss
@@ -1,9 +1,13 @@
 @import "../styles/main";
 
-img {
+.memory-imgs {
     height: 120px;
     width: 120px;
     cursor: pointer;
+}
+
+.content {
+    margin-bottom: 100px;
 }
 
 .image-table {
@@ -20,22 +24,3 @@ img {
     box-shadow: 0 0 1px #999;
 }
 
-.arrow {
-    width: 75px;
-    line-height: 75px;
-    text-align: center;
-    opacity: 1;
-    border: none;
-    color: $white;
-    border-radius: 50%;
-}
-
-.arrow-red {
-    @extend .arrow;
-    background: #d9534f;
-}
-
-.arrow-green {
-    @extend .arrow;
-    background: green;
-}
