--- a/src/app/styles/partials/_sidebar.scss
+++ b/src/app/styles/partials/_sidebar.scss
@@ -8,6 +8,7 @@
 .sidebar {
     background: $sidebar-background;
     color: $sidebar-font-color;
+    font-weight: $font-bold;     
     box-shadow: 0 0 10px;
     position: fixed;
     top: 0;
