--- a/src/app/authentication/forgot-password.component.html
+++ b/src/app/authentication/forgot-password.component.html
@@ -1,6 +1,7 @@
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-xs-8 col-xs-offset-2 text-center">
 
-    <h1>Reset</h1>
+    <h2><span class="header-1">{{header?.headings.titleLeft}} </span><span class="header-2">{{header?.headings.titleRight}}</span> </h2>
+    <h3 class="form-signin-heading">{{language?.messages.heading}}</h3>
 
     <div class="alert alert-danger" *ngIf="errorMessage">{{errorMessage}}</div>
     <div class="alert alert-success" *ngIf="successMessage">{{successMessage}}</div>
@@ -8,14 +9,14 @@
     <form [formGroup]="resetForm" (ngSubmit)="onSubmit(resetForm.value)">
         <div class="form-group input-group" [ngClass]="{'has-error':!resetForm.controls['email'].valid && resetForm.controls['email'].dirty}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>              
-            <input type="email" class="form-control" name="email" placeholder="Email" [formControl]="resetForm.controls['email']">
+            <input type="email" class="form-control" name="email" placeholder={{language?.placeHolders.email}} [formControl]="resetForm.controls['email']">
         </div>      
         <div class="form-control-feedback">
-            <p *ngIf="resetForm.controls['email'].hasError('required') && (resetForm.controls['email'].dirty)">Email is required</p>
-            <p *ngIf="resetForm.controls['email'].hasError('pattern') && (resetForm.controls['email'].dirty)">The email address is invalid</p>
+            <p *ngIf="resetForm.controls['email'].hasError('required') && (resetForm.controls['email'].dirty)">{{authMessages?.errors.emailReq}}</p>
+            <p *ngIf="resetForm.controls['email'].hasError('pattern') && (resetForm.controls['email'].dirty)">{{authMessages?.errors.emailInvalid}}</p>
         </div>      
         <div class="form-group">
-            <button type="submit" [disabled]="!resetForm.valid" class="form-control btn btn-primary btn-lg">Reset</button>
+            <button type="submit" [disabled]="!resetForm.valid" class="btn btn-primary btn-lg">{{language?.messages.buttonMessage}}</button>
         </div>    
     </form>
 </div>
