--- a/src/app/introduction/activity-3/activity-3.component.html
+++ b/src/app/introduction/activity-3/activity-3.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-lg-8 col-lg-offset-3">
-        <h2>Take a picture of yourself, someone or something important to you</h2>
+    <div class="col-lg-6 col-lg-offset-3">
+        <h2 class="sub-heading-1 text-center">{{language?.descriptions.bodyContent}}</h2>
     </div>
 </div>
 <div class="row">
@@ -12,17 +12,10 @@
         <input type="file" name="file" id="file" class="hidden" accept="image/*" (change)="handleInputChange($event)">
         <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState !== webcamStates.OPENED' (click)="openWebcam()">{{webcamButtonText}}</button>
         <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState === webcamStates.OPENED' (click)="snapshot()">{{webcamButtonText}}</button>
-        <button class="btn btn-block btn-primary btn-lg" (click)="fireFileButtonClick()">Choose Existing</button>
+        <button class="btn btn-block btn-primary btn-lg" (click)="fireFileButtonClick()">{{language?.messages.browseButton}}</button>
         <button class="btn btn-block btn-primary btn-lg" [disabled]='!imageLoaded' (click)="shufflePuzzle()">{{puzzleState}}</button>   
-        <button class="btn btn-block btn-success btn-lg" [disabled]='!(webcamState === webcamStates.CAPTURED || imageLoaded)' (click)="upload()">Set as profile picture</button>
+        <button class="btn btn-block btn-success btn-lg" [disabled]='!(webcamState === webcamStates.CAPTURED || imageLoaded)' (click)="upload()">{{language?.messages.setProPicButton}}</button>
     </div>
 </div>
-<div class="row">
-    <button [className]="position + ' arrow-red'">
-        Prev
-    </button>
-    <button [hidden]="!activityComplete" class="arrow-green bounce col-lg-5 col-md-offset-4">
-        Next
-    </button>    
-</div>
+<button-nav [complete]="activityComplete" [completed]="completed" nexturl="/malaria-101/activity-1-1" prevurl="/introduction/activity-2"></button-nav>
 
