--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="text-center">
-      <h1 class="stage-header">{{language?.heading}}</h1>
+<div class="container">
+    <div class="row">
+		<div class="col-md-12 text-center"><h2 class="stage-header">{{language?.heading}}</h2></div>
     </div>
-  </div>
-  <router-outlet></router-outlet>
+  	<router-outlet></router-outlet>
 </div>
