--- a/src/app/malaria-101/activity-1/activity-1-2.component.html
+++ b/src/app/malaria-101/activity-1/activity-1-2.component.html
@@ -10,6 +10,5 @@
         <img class="lifecycle-imgs pieces" src="../../../../assets/img/{{card}}" draggable="true" (dragstart)="drag($event)" id="drag{{idx+1}}">
     </div>
 </div>
-<button-nav nexturl="/malaria/activity-2" prevurl="/malaria/activity-1-1" [complete]="activityComplete"></button-nav>
-
+<button-nav nexturl="/malaria-101/activity-2" prevurl="/malaria-101/activity-1-1" [completed]="completed" [complete]="activityComplete"></button-nav>
 
