--- a/src/app/malaria-101/malaria-101.component.html
+++ b/src/app/malaria-101/malaria-101.component.html
@@ -1,8 +1,7 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="text-center">
-            <h1 class="stage-header">{{language?.heading}}</h1>
-        </div>
-    </div>
-    <router-outlet></router-outlet>
+
+<div class="row">
+	<div class="col-md-12 text-center"><h2 class="stage-header">{{language?.heading}}</h2></div>
+</div>
+<div class="content">
+	<router-outlet></router-outlet>
 </div>
