--- a/src/app/meds-n-labels/meds-n-labels.component.html
+++ b/src/app/meds-n-labels/meds-n-labels.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-5 col-lg-offset-4">
-            <h3 class="stage-header">Medication & Labels</h3>
-        </div>
+        <div class="col-md-12 text-center"><h2 class="stage-header">{{language?.heading}}</h2></div>
     </div>
-    <router-outlet> </router-outlet>
+    <div class="content">
+        <router-outlet> </router-outlet>
+    </div>
 </div>
