--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -15,3 +15,16 @@ $dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
 $orange: #FAE3BB;
 $dark-orange: #EBBB67;
+$yellow: #FBF38F;
+$orange: #FAE3BB;
+$dark-orange: #EBBB67;
+
+$intro-color: #00F977;
+$malaria-color: #EB5A61;
+$med-color: #017E84;
+$pc-policy-color: #F2AE3E;
+$white-color: #FFFFFF;
+$activity-incomplete: #BEBEBE;
+$malaria-outer-circle-color: #E13946;
+$med-outer-circle-color: #07717E;
+$pc-outer-circle-policy-color: #F09938;
