--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
     <ul class="nav text-center">
       <div class="profile">
-        <img  src="assets/img/profilepic.png" class="profile-pic img-circle">
+        <img  [src]="proPic" onError="this.src='assets/img/profilepic.png';" class="profile-pic img-circle">
         <p> {{username}} </p>
       </div>
       <li><a routerLink="/introduction">{{language?.links.introduction}}</a></li>
@@ -19,4 +19,3 @@
     </ul>
   </div>
 </div>
-
