--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -45,8 +45,8 @@
         </div>
         <div class="row">
             <div class="menu-button">
-                <img class="hex" src="../../assets/img/pc-policy.png" (click)="navigateToPage('/pcpolicy')">
-                <button class="but pc-policy-btn" (click)="navigateToPage('/pcpolicy')">
+                <img class="hex" src="../../assets/img/pc-policy.png" (click)="navigateToPage('/introduction/activity-2')">
+                <button class="but pc-policy-btn" (click)="navigateToPage('/introduction/activity-2')">
                     {{language?.peaceCorps.heading}}
                 </button>
                 <div class="outer-circle pc-policy-outer-circle">
@@ -58,9 +58,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="menu-button">
+            <div class="menu-button" (click)="navigateToPage('/unlocked-stage')">
                 <img class="hex" src="../../assets/img/unlocked.png">
-                <button class="but unlocked-btn">
+                <button class="but unlocked-btn" (click)="navigateToPage('/unlocked-stage')">
                     {{language?.lockedStage.heading}}
                 </button>
                 <div class="outer-circle unlocked-outer-circle">
@@ -73,4 +73,3 @@
         </div>
     </div>
 </div>
-
