--- a/src/app/unlocked-stage/unlocked-stage.component.scss
+++ b/src/app/unlocked-stage/unlocked-stage.component.scss
@@ -49,7 +49,7 @@
     width: 20%;
     background-color: white;
     @include borderRadius(25px);
-    border: 1px solid #000000;
+    border: 1px solid $black;
 }
 
 @mixin legendText($top, $left) {
@@ -99,7 +99,7 @@
     @include positioning(absolute, 125px, 83%);
     border: 1px solid black;
     width: 8%;
-    background: #FAE3BB;
+    background: $orange;
     padding-top: 30%;
 }
 
@@ -133,6 +133,7 @@
 
 #spray {
     position: absolute;
+    display: none;
     @include selectable(none); 
     @include draggable(none);  
 }
@@ -155,4 +156,10 @@
     #mosquito-health-bar {
         @include healthBar(red)
     }     
+}
+
+.swal2-success-circular-line-left,
+.swal2-success-fix,
+.swal2-success-circular-line-right {
+    background: rgb(255, 255, 255);
 }
